# easytier-manager

./: .env  .env.base  .env.dev  .env.gitee  .env.pro  .env.test  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .stylelintignore  CHANGELOG.md  README.md  README.zh-CN.md  TODO.md  commitlint.config.js  components.d.ts  dev-app-update.yml  electron-builder.json5  electron-builder.json5.bak  electron-builder.yml  eslint.config.mjs  index.html  package.json  prettier.config.js  stats.html  stylelint.config.js  tsconfig.json  uno.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci-pro-win.yml  ci.yml  release-mac.yml  release-pro-win.yml  release-pro.yml  release-win.yml  release.yml
.husky/: commit-msg  lintstagedrc.cjs  pre-commit
electron/main/: appTray.ts  index.ts  logger.ts  mainUtil.ts  updater.ts
electron/preload/: index.ts
src/: App.vue  permission.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/common/: index.ts
src/api/easytier/: index.ts  types.ts
src/api/login/: index.ts
src/api/menu/: index.ts
src/axios/: config.ts  index.ts
src/constants/: easytier.ts  index.ts
src/layout/: Layout.vue
src/locales/: en.ts  zh-CN.ts
src/router/: index.ts
src/styles/: index.less  var.css
src/types/: easyTier.ts
src/utils/: easyTierUtil.ts  execUtil.ts  fileUtil.ts  i18nUtil.ts  logger.ts  notifyUtil.ts  shellUtil.ts  sysUtil.ts
tmp/: components.d.ts
types/: global.d.ts
(+54 files in other folders)
