[package]
authors = ["cheng"]
description = "EasyTier 管理器 Pro"
edition = "2021"
license = ""
name = "easytier-manager-pro"
repository = ""
rust-version = "1.77.2"
version = "3.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "app_lib"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

# [profile.dev]
# incremental = true # Compile your binary in smaller steps.

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
